--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,34 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+
+      <% if (username) { %>
+        <span>Logged in as: <%= username %> </span>
+        <form action="/logout" method="POST">
+          <div class="form-inline">
+          <button type="submit" class="btn btn-primary">Log Out</button> 
+          </div>
+        </form>
+
+      <% } else { %>
+        <form action="/login" method="POST">
+          <div class="form-inline">
+          <input class="form-control" type="text" name="username" placeholder="Enter username"
+            style="width: 300px; margin:0 auto;">
+          <button type="submit" class="btn btn-primary">Log in</button> 
+          </div>
+        </form>
+      <% } %>
+
+    
+    <!--<form action="/register" method="POST">
+      <div class="form-inline">
+      <button type="submit" class="btn btn-primary">Register</button> 
+      </div>
+    </form>-->
+
+
+
     </div>
   </nav>
 </header>
