--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,14 +15,14 @@
       crossorigin="anonymous"
     />
 
-    <title>Register</title>
+    <title>Log In</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
-      <h3>Register</h3>
-      <form action="/urls/register" method="POST">
+      <h3>Log In</h3>
+      <form action="/urls/login" method="POST">
         <div class="form-group">
           <label for="email">Enter email address:</label>
           <input
@@ -33,7 +33,6 @@
             style="width: 300px; margin: 1em"
           />    
         </div>
-
         <div class="form-group">
           <label for="password">Enter password:</label>
           <input
@@ -45,7 +44,7 @@
           />    
         </div>
 
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Log In</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
