--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>Log In</h3>
-      <form action="/urls/login" method="POST">
+      <form action="/login" method="POST">
         <div class="form-group">
           <label for="email">Enter email address:</label>
           <input
