--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,15 +9,16 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if (user_id) { %>
+
+        <% if (user) { %>
           <form class="form-inline" action="/logout" method="POST" style="position: absolute; right: 0;">
-            <span>Logged in as: <%= user_id %> </span>&nbsp;&nbsp;&nbsp;
+            <span>Logged in as: <%= user.email %> </span>&nbsp;&nbsp;&nbsp;
             <button type="submit" class="btn btn-outline-dark">Log Out</button>
           </form>
 
           <% } else { %>
-            <a class="nav-item nav-link" href="/urls/login">Login</a>
-            <a class="nav-item nav-link" href="/urls/register">Register </a>
+            <a class="nav-item nav-link" href="/login">Login</a>
+            <a class="nav-item nav-link" href="/register">Register </a>
             <% } %>
 
       </div>
