--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>Register</h3>
-      <form action="/urls/register" method="POST">
+      <form action="/register" method="POST">
         <div class="form-group">
           <label for="email">Enter email address:</label>
           <input
