--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,7 +29,7 @@
               <%= id %>
             </td>
             <td>
-              <%= urls[id] %>
+              <%= urls[id].longURL %>
             <td>
               <a class="nav-item nav-link" href="/urls/<%= id %>"><button type="submit" class="btn btn-outline-warning">Edit</button></a>
             </td>
