added images to readme and fixed login post and edit post

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,7 @@
       <div class="card-footer text-muted">
         <h3 class="card-title" style="color: darkgrey;">Edit</h3>
         <form method="post" action="/urls/<%= id %>/edit">
-          <input class="form-control" type="text" name="longURL" placeholder="http://"
+          <input value="<%=longURL%>" class="form-control" type="text" name="longURL" placeholder="http://"
             style="width: 300px; margin:0 auto;">
           <br>
           <button type="submit" class="btn btn-primary">Submit</button>
